# pose-classification

./: .gitignore  Pipfile  README.md  environment.yml  generate_keypoints_for_data.py  posenet.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: combine_train_test_data.py  generate_keypoints_for_data.py  pose_classifier.py  pose_classifier_utils.py  posenet.py  train_classifier.py  utils.py
src/flask_api/: app.py
tests/: test_api_request.py
