[tool.poetry]
name = "pose-detection"
version = "0.1.0"
description = "Detection of keypoints using Tensorflow's pre-trained posenet and the classification of Yoga Poses using a classifier"
authors = ["kkin1995 <karan@akinariwala.com>"]

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.dev-dependencies]
opencv-python = "^4.5.3"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
